Fix build errors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ codec = { package = "parity-scale-codec", version = "3.0.0", default-features = 
 primitive-types = { version = "0.7.2", default-features = false }
 schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false, optional = true }
 ed25519-dalek = { version = "1.0.0-pre.3", default-features = false, features = ["u64_backend", "alloc"], optional = true }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30", optional = true }
+
 # including this to fix C build issues in consumer crates
 # 'No available targets are compatible with this triple.'
 clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
@@ -19,21 +21,25 @@ clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
 [dev-dependencies]
 rand = { version = "0.7.3", features = ["wasm-bindgen"] }
 rand_core = { version = "0.5.1", features = ["alloc"] }
+libsecp256k1 = { version = "0.7", default-features = false, features = [ "hmac" ]}
 
 [features]
 default = ["std"]
 std = [
     "crypto",
     "ed25519-dalek/std",
-    "schnorrkel/std"
+    "schnorrkel/std",
+    "sp-core/std",
 ]
  # enable cryptographic signing and verification features in 'no std'
 crypto = [
     "ed25519-dalek",
-    "schnorrkel"
+    "schnorrkel",
+    "sp-core",
 ]
 # enable compilation for wasm-bindgen
 wasm = [
     "ed25519-dalek",
-    "schnorrkel/wasm-bindgen"
+    "schnorrkel/wasm-bindgen",
+    "sp-core",
 ]
