--- a/js/Cargo.toml
+++ b/js/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
-name = "js"
-version = "0.0.2"
-authors = ["Centrality Developers <developers@centrality.ai>"]
-edition = "2018"
+name = "pallet-doughnut-js"
+version = "0.1.0"
+authors = ["The Root Network Team"]
+edition = "2021"
 description = "JS/Wasm bindings for the rust Doughnut codec"
 license = "UNLICENSED"
-repository = "https://github.com/cennznet/doughnut-rs"
+repository = "https://github.com/futureversecom/trn-doughnut-rs"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-doughnut_rs = { path = "../", features = ["wasm"] }
-wasm-bindgen = "0.2.64"
-clear_on_drop = { version = "0.2.4", features = ["no_cc"] }
-codec = { package = "parity-scale-codec", version = "1.3.1", features = ["derive"] }
+doughnut-rs = { path = "../", default-features = false, features = ["crypto"] }
+wasm-bindgen = "0.2.89"
+clear_on_drop = { version = "0.2.5", features = ["no_cc"] }
+codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
 
 [profile.release]
 # disable loop vectorization for smaller wasm
