--- a/js/package.json
+++ b/js/package.json
@@ -3,33 +3,30 @@
   "version": "0.2.0",
   "description": "Wasm Doughnut codec",
   "main": "libNode/doughnut.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/futureversecom/trn-doughnut-rs.git"
+  },
+  "keywords": [ "doughnut" ],
+  "author": "Futureverse Developers",
+  "license": "UNLICENSED",
+  "bugs": { "url": "https://github.com/futureversecom/trn-doughnut-rs/issues" },
+  "homepage": "https://github.com/futureversecom/trn-doughnut-rs/js#readme",
   "browser": "libBrowser/doughnut.js",
-  "dependencies": {
-    "@polkadot/util-crypto": "^2.18.1",
-    "tweetnacl": "^1.0.3"
-  },
-  "devDependencies": {
-    "jest": "^26.1.0"
-  },
   "files": [
     "libBrowser/*",
     "libNode/*"
   ],
   "scripts": {
+    "pack": "wasm-pack build --target web --release",
     "build": "rm -rf libNode libBrowser && sh build.sh browser libBrowser && sh build.sh nodejs libNode",
     "test": "jest && node test/nodeImportWorks.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cennznet/doughnut-rs.git"
+  "devDependencies": {
+    "jest": "^26.1.0"
   },
-  "keywords": [
-    "doughnut"
-  ],
-  "author": "Centrality Developers",
-  "license": "UNLICENSED",
-  "bugs": {
-    "url": "https://github.com/cennznet/doughnut-rs/issues"
-  },
-  "homepage": "https://github.com/cennznet/doughnut-rs/js#readme"
+  "dependencies": {
+    "@polkadot/util-crypto": "^2.18.1",
+    "tweetnacl": "^1.0.3"
+  }
 }
