--- a/js/Cargo.toml
+++ b/js/Cargo.toml
@@ -15,6 +15,7 @@ doughnut-rs = { path = "../", default-features = false, features = ["crypto", "w
 wasm-bindgen = "0.2.89"
 clear_on_drop = { version = "0.2.5", features = ["no_cc"] }
 codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
+console_error_panic_hook = "0.1"
 
 [profile.release]
 # disable loop vectorization for smaller wasm
