--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ repository = "https://github.com/futureversecom/trn-doughnut-rs"
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
+serde = { version = "1.0.145", default-features = false, features = ["derive"] }
+serde_json = { version = "1.0.64", default-features = false, features = ["alloc"]}
 primitive-types = { version = "0.12.2", default-features = false }
 schnorrkel = { version = "0.11.4", default-features = false, optional = true }
 ed25519-dalek = { version = "1.0.0-pre.3", default-features = false, features = ["u64_backend", "alloc"], optional = true }
@@ -21,6 +23,9 @@ sha3 = { version = "0.10.8", default-features = false, optional = true }
 # 'No available targets are compatible with this triple.'
 clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
 
+# pact = { git = "https://github.com/futureversecom/trn-pact", branch = "feat/wasm-pack", default-features = false }
+pact = { path = "../trn-pact/", default-features = false }
+
 [dev-dependencies]
 rand = { version = "0.8.5" }
 rand_core = { version = "0.5.1", features = ["alloc"] }
@@ -29,6 +34,10 @@ sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-
 [features]
 default = ["std"]
 std = [
+    "codec/std",
+    "pact/std",
+    "serde/std",
+    "serde_json/std",
     "crypto",
     "ed25519-dalek/std",
     "schnorrkel/std",
