introduced trnnnut js lib + json alloc fixes to build for wasm32-unknown-unknown

--- a/js/Cargo.toml
+++ b/js/Cargo.toml
@@ -11,11 +11,14 @@ repository = "https://github.com/futureversecom/trn-doughnut-rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-doughnut-rs = { path = "../", default-features = false, features = ["crypto", "wasm32"] }
-wasm-bindgen = "0.2.89"
-clear_on_drop = { version = "0.2.5", features = ["no_cc"] }
+doughnut-rs = { path = "../", default-features = false, features = ["crypto"] }
+
 codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
+serde-wasm-bindgen = "0.6.3"
+wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
+clear_on_drop = { version = "0.2.5", features = ["no_cc"] }
 console_error_panic_hook = "0.1"
+
 
 [profile.release]
 # disable loop vectorization for smaller wasm
