trn-seed doughnuts integration (#1)
* Update parity-scale-codec to 3.0.0

* Update package name to doughnut-rs

* Add ecdsa signing.

* Add ecdsa verify

* Add ecdsa support to verify_signature

* Add tests

* Fix build errors

* More tests

* Change to use sp-io when ecdsa verifying.

* temp commit

* Add doughnut v1

* Add trait implementations for doughnut v1

* Integrate doughnut v1 to the crate

* misc lib importstructure update

* trait impl restructure

* project restructure

* project restructure

* removed sp-core, using libsecp256k1, removed conditional compilation for std, can sign in no-std, code cleanup

* project restructure

* uncommented a bunch of v1 doughnut tests

* signatures returned from signing scheme fixed known length

* hardcoded secret key and signature lengths to move runtime checks to compile-time

* quick refactor

* small refactor

* updated Cargo.toml dep versions

* holder -> sender rename

* fixed typo with error variant

* Revert "fixed typo with error variant"

This reverts commit a4bb24ee5276be3a73a29cbae14891bceeed33e6.

* Revert "holder -> sender rename"

This reverts commit c8c7ca671f7f498c4ee906ab3382efa60b9a8864.

* copyright upd from centrality -> futureverse

* conditional compilation support for wasm32 targets

* editorconfig + prettier max line length upd

* ignore file upd

* upd js bindgen project - successful compilation and usage of doughnut lib

* root lock file upd

* cargo fmt --all

* using feature flags instead of conditional wasm target build

* Fix wasm-pack build

* Add fee_payer to doughnut v1

* Add fee_payer to DoughnutApi, update encode/decode

* Update tests

* rename fee_payer to fee_mode, add fee_payer()

* Add FeeMode enum

* Add PayloadVersion enum

* Add DecodeInner trait

* Implement DecodeInner for v0,v1

* Doughnut decode support both v0,v1 now

* fix warnings

* remove todo

* Implement Default 

--- a/.github/workflows/cd-rs.yml
+++ b/.github/workflows/cd-rs.yml
@@ -3,9 +3,8 @@ name: Publish to Crates.io
 on:
   workflow_dispatch:
 
-# Note: The `doughtnut-js` package version is based on the `js/Cargo.toml` file.
 jobs:
-  publish-npm:
+  publish-crate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -14,6 +13,6 @@ jobs:
         with:
           cache-on-failure: true
       - name: Publish to Crates.io
-        run: cargo publish
+        run: cargo publish --token $CARGO_REGISTRY_TOKEN
         env:
-          CARGO_TOKEN: ${{ secrets.CARGO_TOKEN }}
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
