--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rust: ["stable", "nightly", "1.69"]
+        rust: ["stable", "1.73"]
         flags: ["--all-features"]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
@@ -33,43 +33,45 @@ jobs:
       - name: test
         run: cargo test ${{ matrix.flags }}
 
-  wasm:
+  js-wasm-build-test:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@1.73
         with:
-          path: 'js'
-      - uses: dtolnay/rust-toolchain@nightly
-        with:
-          target: wasm32-unknown-unknown
-      - uses: taiki-e/install-action@cargo-hack
-      - uses: Swatinem/rust-cache@v2
-        with:
-          cache-on-failure: true
-      - name: cargo hack
-        run: |
-          cargo hack check --workspace --target wasm32-unknown-unknown
+          components: rustfmt
+      - run: cargo fmt --all --check
+        working-directory: js
+      - name: Install & Build dependencies
+        uses: ./.github/actions/install-wasm-dependencies
+      - run: cargo check --target wasm32-unknown-unknown
+        working-directory: js
+      - name: Test JS wasm library
+        run: pnpm test
+        working-directory: js
 
-  clippy:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@clippy
-      - uses: Swatinem/rust-cache@v2
-        with:
-          cache-on-failure: true
-      - run: cargo clippy --workspace --all-targets --all-features
-        env:
-          RUSTFLAGS: -Dwarnings
+  # clippy:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 30
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: dtolnay/rust-toolchain@1.73
+  #       with:
+  #         components: clippy
+  #     - uses: Swatinem/rust-cache@v2
+  #       with:
+  #         cache-on-failure: true
+  #     - run: cargo clippy --workspace --all-targets --all-features
+  #       env:
+  #         RUSTFLAGS: -Dwarnings
 
   fmt:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@nightly
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@1.73
         with:
           components: rustfmt
       - run: cargo fmt --all --check
