--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,39 +1,50 @@
 [package]
-name = "doughnut_rs"
-version = "0.5.1"
-authors = ["Centrality Developers <developers@centrality.ai>"]
-edition = "2018"
+name = "doughnut-rs"
+version = "0.2.2"
+authors = ["The Root Network Team"]
+edition = "2021"
 description = "The official rust doughnut codec"
-license = "UNLICENSED"
-repository = "https://github.com/cennznet/doughnut-rs"
+license = "BUSL-1.1"
+repository = "https://github.com/futureversecom/trn-doughnut-rs"
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "^1.3.0", default-features = false, features = ["derive"] }
-primitive-types = { version = "0.7.2", default-features = false }
-schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false, optional = true }
+codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
+serde = { version = "1.0.145", default-features = false, features = ["derive", "alloc"] }
+primitive-types = { version = "0.12.2", default-features = false }
+schnorrkel = { version = "0.11.4", default-features = false, optional = true }
 ed25519-dalek = { version = "1.0.0-pre.3", default-features = false, features = ["u64_backend", "alloc"], optional = true }
+libsecp256k1 = { version = "0.7", default-features = false, optional = true, features = [ "hmac", "static-context" ] }
+blake2 = { version = "0.10.6", default-features = false, optional = true }
+digest = { version = "0.10.3", default-features = false }
+sha3 = { version = "0.10.8", default-features = false, optional = true }
+
 # including this to fix C build issues in consumer crates
 # 'No available targets are compatible with this triple.'
 clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
 
+trn-pact = { version = "0.2.1", default-features = false }
+
 [dev-dependencies]
-rand = { version = "0.7.3", features = ["wasm-bindgen"] }
+rand = { version = "0.8.5" }
 rand_core = { version = "0.5.1", features = ["alloc"] }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30"}
 
 [features]
 default = ["std"]
 std = [
+    "codec/std",
+    "trn-pact/std",
+    "serde/std",
     "crypto",
     "ed25519-dalek/std",
-    "schnorrkel/std"
+    "schnorrkel/std",
+    "digest/std"
 ]
- # enable cryptographic signing and verification features in 'no std'
+# enable cryptographic signing and verification features in 'no std'
 crypto = [
+    "libsecp256k1",
     "ed25519-dalek",
-    "schnorrkel"
-]
-# enable compilation for wasm-bindgen
-wasm = [
-    "ed25519-dalek",
-    "schnorrkel/wasm-bindgen"
+    "schnorrkel",
+    "blake2",
+    "sha3"
 ]
